# visvise-sdk-python

./: LICENSE  README.md  README_EN.md  pyproject.toml
examples/: README.md  README_EN.md  gen_360.py  gen_high_model.py  gen_lod.py  gen_low_model.py  gen_mesh_refine.py  gen_mid_model.py  gen_pose.py  gen_retopology.py  gen_rigging.py  gen_segment_2d.py  gen_skinning.py  gen_text_motion.py  gen_texture.py  gen_uv.py  gen_video_motion.py
examples/assets/: rigging_model.fbx  rigging_model.json  skinning_model.fbx  skinning_model.json
tests/: test_atomic_api.py  test_auto_algorithm_model.py  test_batch1.py  test_batch2.py  test_batch3.py  test_bytes_input_gen.py  test_final.py  test_newkey_smoke.py  test_optional_params.py  test_sniff_extension.py  test_testenv_smoke.py
visvise/: __init__.py  api.py  client.py  exceptions.py  http.py  models.py
