[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visvise-weaver-sdk"
version = "1.1.0"
description = "VISVISE Weaver OpenAPI Python SDK"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["visvise", "3d", "ai", "weaver"]

dependencies = [
    "requests>=2.28",
    "cos-python-sdk-v5>=1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-mock",
    "responses",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["visvise*"]
exclude = ["examples*", "tests*", "assets*"]
